unpackaged/main/default/objects/Services_Project__c/Services_Project__c.object-meta.xml
<CustomObject>
    <label>Services Project</label>
    <nameField>
        <label>Services Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>