unpackaged/main/default/objects/Services_Project__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Time and Material</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Non Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>