unpackaged/main/default/objects/Services_Project__c/fields/Budget_Hours_Consumed_Pct__c.field-meta.xml
<CustomField>
    <fullName>Budget_Hours_Consumed_Pct__c</fullName>
    <label>Budget Hours Consumed %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>