unpackaged/main/default/objects/Services_Project__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Services Projects</relationshipLabel>
    <relationshipName>Services_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>