unpackaged/main/default/objects/Services_Project__c/fields/CSAT_Survey_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey_Completed_Date__c</fullName>
    <label>CSAT: Survey Completed Date</label>
    <type>Date</type>
</CustomField>