unpackaged/main/default/objects/Services_Project__c/fields/CSAT_Timeliness_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Timeliness_Score__c</fullName>
    <label>CSAT: Timeliness Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>