unpackaged/main/default/objects/Services_Project__c/fields/Current_Phase_Names__c.field-meta.xml
<CustomField>
    <fullName>Current_Phase_Names__c</fullName>
    <label>Current Phase Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>