unpackaged/main/default/objects/Services_Project__c/fields/Due_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Actual__c</fullName>
    <label>Due Date Actual</label>
    <type>Date</type>
</CustomField>