unpackaged/main/default/objects/Services_Project__c/fields/Forecasted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Cost__c</fullName>
    <label>Forecasted Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>