unpackaged/main/default/objects/Services_Project__c/fields/Forecasted_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Profit_Margin__c</fullName>
    <label>Forecasted Profit Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>