unpackaged/main/default/objects/Services_Project__c/fields/Kick_Off_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Planned_Date__c</fullName>
    <label>Kick Off Planned Date</label>
    <type>Date</type>
</CustomField>