unpackaged/main/default/objects/Services_Project__c/fields/Last_Completed_Phase_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Phase_Name__c</fullName>
    <label>Last Completed Phase Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>