unpackaged/main/default/objects/Services_Project__c/fields/Last_Current_Phase__c.field-meta.xml
<CustomField>
    <fullName>Last_Current_Phase__c</fullName>
    <label>Last Current Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>