unpackaged/main/default/objects/Services_Project__c/fields/Name_Override__c.field-meta.xml
<CustomField>
    <fullName>Name_Override__c</fullName>
    <inlineHelpText>If set, replaces the line item name in the record&#39;s standard name with the value (up to 20 characters).</inlineHelpText>
    <label>Name Override</label>
    <length>20</length>
    <type>Text</type>
</CustomField>