unpackaged/main/default/objects/Services_Project__c/fields/Num_Blocked_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Num_Blocked_Tasks__c</fullName>
    <label># Blocked Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>