unpackaged/main/default/objects/Services_Project__c/fields/Num_In_Progress_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Num_In_Progress_Tasks__c</fullName>
    <label># In Progress Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>