unpackaged/main/default/objects/Services_Project__c/fields/Num_Project_Budgeted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Num_Project_Budgeted_Hours__c</fullName>
    <label># Project Budgeted Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>