unpackaged/main/default/objects/Services_Project__c/fields/Num_Total_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Num_Total_Milestones__c</fullName>
    <label># Total Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>