unpackaged/main/default/objects/Services_Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Services Projects</relationshipLabel>
    <relationshipName>Services_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>