unpackaged/main/default/objects/Services_Project__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Services Projects</relationshipLabel>
    <relationshipName>Services_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>