unpackaged/main/default/objects/Services_Project__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lazer Technologies</fullName>
            </value>
            <value>
                <fullName>TechRebels</fullName>
            </value>
            <value>
                <fullName>Toolpioneers</fullName>
            </value>
            <value>
                <fullName>Paramint</fullName>
            </value>
            <value>
                <fullName>Proga Digital</fullName>
            </value>
            <value>
                <fullName>Rappid</fullName>
            </value>
            <value>
                <fullName>Bytecode IO</fullName>
            </value>
            <value>
                <fullName>Stackdrop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>