unpackaged/main/default/objects/Services_Project__c/fields/Partner_SOW_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_SOW_Number__c</fullName>
    <label>Partner SOW Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>