unpackaged/main/default/objects/Services_Project__c/fields/Progress_Percent__c.field-meta.xml
<CustomField>
    <fullName>Progress_Percent__c</fullName>
    <label>Progress Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>