unpackaged/main/default/objects/Services_Project__c/fields/Project_Health_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Health_Notes__c</fullName>
    <label>Project Health Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>