unpackaged/main/default/objects/Services_Project__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <externalId>true</externalId>
    <label>Project ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>