unpackaged/main/default/objects/Services_Project__c/fields/Project_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_URL__c</fullName>
    <label>Project URL</label>
    <type>Url</type>
</CustomField>