unpackaged/main/default/objects/Services_Project__c/fields/Sales_Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Role__c</fullName>
    <formula>IF(
  ISBLANK(Opportunity__r.Parent_Opportunity__c),
  Opportunity__r.Sales_Manager_Role__c,
  Opportunity__r.Parent_Opportunity__r.Sales_Manager_Role__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager: Role</label>
    <type>Text</type>
</CustomField>