unpackaged/main/default/objects/Services_Project__c/fields/Sales_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner_Name__c</fullName>
    <formula>IF(
  ISBLANK(Opportunity__r.Parent_Opportunity__c),
  Opportunity__r.Owner.Full_Name__c,
  Opportunity__r.Parent_Opportunity__r.Owner.Full_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Owner: Name</label>
    <type>Text</type>
</CustomField>