unpackaged/main/default/objects/Services_Project__c/fields/Sales_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner_Region__c</fullName>
    <formula>IF(
  ISBLANK(Opportunity__r.Parent_Opportunity__c),
  TEXT(Opportunity__r.Owner_Region__c),
  TEXT(Opportunity__r.Parent_Opportunity__r.Owner_Region__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Owner: Region</label>
    <type>Text</type>
</CustomField>