unpackaged/main/default/objects/Services_Project__c/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <label>Slug</label>
    <length>16</length>
    <type>Text</type>
</CustomField>