unpackaged/main/default/objects/Services_Project__c/fields/Technical_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Technical_Account_Manager__c</fullName>
    <formula>IF(
  ISBLANK(Opportunity__r.Parent_Opportunity__c),
  Opportunity__r.Technical_Account_Manager__r.Full_Name_with_Role__c,
  Opportunity__r.Parent_Opportunity__r.Technical_Account_Manager__r.Full_Name_with_Role__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Account Manager</label>
    <type>Text</type>
</CustomField>