unpackaged/main/default/objects/Services_Project__c/fields/Technical_Account_Manager_Region__c.field-meta.xml
<CustomField>
    <fullName>Technical_Account_Manager_Region__c</fullName>
    <formula>IF(
  ISBLANK(Opportunity__r.Parent_Opportunity__c),
  TEXT(Opportunity__r.Technical_Account_Manager_Region__c),
  TEXT(Opportunity__r.Parent_Opportunity__r.Technical_Account_Manager_Region__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Account Manager: Region</label>
    <type>Text</type>
</CustomField>