unpackaged/main/default/objects/Services_Project__c/fields/Technical_Account_Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Technical_Account_Manager_Role__c</fullName>
    <formula>IF(
  ISBLANK(Opportunity__r.Parent_Opportunity__c),
  Opportunity__r.Technical_Account_Manager__r.Role_Name__c,
  Opportunity__r.Parent_Opportunity__r.Technical_Account_Manager__r.Role_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Account Manager: Role</label>
    <type>Text</type>
</CustomField>